Pod-delivery/delivery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-delivery
  namespace: delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-delivery
  template:
    metadata:
      labels:
        app: pod-delivery
    spec:
      containers:
        - name: delivery-db-container
          image: postgres:15
          imagePullPolicy: Always
          ports:
            - containerPort: 5435
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: delivery-storage

        - name: delivery-api-container
          image: goodfooddelivery
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

        - name: delivery-mongodb-container 
          image: mongo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 27017 
          volumeMounts:
            - mountPath: /data/db 
              name: mongo-delivery-storage 
            - mountPath: /docker-entrypoint-initdb.d/mongo-init.js
              name: mongo-init-script-volume
              subPath: mongo-init.js 
          resources: 
            requests:
              cpu: "250m"
              memory: "1Gi"
            limits: 
              cpu: "500m"
              memory: "2Gi"

      volumes:
        - name: delivery-storage
          persistentVolumeClaim:
            claimName: delivery-pvc 
        - name: mongo-delivery-storage 
          persistentVolumeClaim:
            claimName: mongo-delivery-pvc 
        - name: mongo-init-script-volume
          configMap:
            name: mongo-init-config
