Pod-delivery/delivery-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-mongo-service 
  namespace: delivery
spec:
  selector:
    app: pod-delivery
  ports:
    - name: mongo-port 
      protocol: TCP
      port: 27017   
      targetPort: 27017 
  type: ClusterIP
