Pod-delivery/delivery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  namespace: delivery
spec:
  selector:
    app: pod-delivery
  ports:
    - name: db-port
      protocol: TCP
      port: 5435
      targetPort: 5435
    - name: api-port
      protocol: TCP
      port: 3003
      targetPort: 3003
  type: ClusterIP  # Traefik gère le routage
