Pod-delivery/delivery-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: delivery-ingress
  namespace: delivery
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/delivery/api`)
      kind: Rule
      priority: 12
      services:
        - name: delivery-service
          namespace: delivery
          port: 3003
      middlewares:
        - name: strip-delivery-api-prefix
          namespace: delivery

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-delivery-api-prefix
  namespace: delivery
spec:
  stripPrefix:
    prefixes:
      - /delivery/api
